Optimized the SimulationAggregationService to sort the capitals fewer times